2011-04-13  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_generate_random_backtrace_no_gc): Fix a message
	typo.
	* dbg_mlc.c (GC_debug_malloc): Add a comment (about zero size).
	* dbg_mlc.c (GC_debug_generic_malloc_inner): Reformat the comment.
	* dbg_mlc.c (GC_strdup): Call GC_err_printf instead of WARN (in
	case of NULL argument).
	* dbg_mlc.c (GC_free): In case of NULL argument, just return
	(without any warning printed); eliminate "uncollectable" local
	variable.

2011-04-13  Ivan Maidanski  <ivmai@mail.ru> (mostly really Rainer Orth)

	* configure.ac (THREADDLLIBS): Use alternate thread library on
	Solaris 8.
	* configure.ac (need_atomic_ops_asm): Set to true only for Sparc
	Solaris.
	* configure.ac: Don't use libdl on mips-sgi-irix6.
	* configure: Regenerate.

2011-04-11  Ivan Maidanski  <ivmai@mail.ru> (really Jie Liu)

	* mach_dep.c (NO_GETCONTEXT); Define for RTEMS.
	* mach_dep.c (GC_with_callee_saves_pushed): Don't call
	__builtin_unwind_init() for RTEMS; use setjmp() without the
	leading underscore (for RTEMS).
	* tests/test.c (BIG): Use smaller value for RTEMS.
	* tests/test.c (main): Customize for RTEMS.

2011-04-11  Ivan Maidanski  <ivmai@mail.ru> (mostly really Jim Meyering)

	* configure.host: Remove doubled words in comments.
	* os_dep.c: Ditto.
	* doc/README: Ditto.
	* extra/setjmp_t.c: Ditto.
	* tests/huge_test.c: Ditto.
	* extra/setjmp_t.c (getpagesize, nested_sp, main, g): Replace the
	K&R-style function definition with the ANSI C one.
	* extra/setjmp_t.c: Expand all tabs to spaces.
	* extra/setjmp_t.c (nested_sp): Implement in the same way as
	GC_approx_sp.

2011-04-10  Ivan Maidanski  <ivmai@mail.ru> (really Iain Sandoe, Mike Stump)

	* dyn_load.c (GC_dyld_sections): Add more sctions.
	* dyn_load.c (GC_dyld_add_sect_fmts): New static varaible.
	* dyn_load.c (L2_MAX_OFILE_ALIGNMENT): New macro.
	* dyn_load.c (GC_dyld_image_add, GC_dyld_image_remove): Improve
	logging; add support for on-demand sections.