@@ -1,3 +1,10 @@
+2011-04-16  Ivan Maidanski  <ivmai@mail.ru>
+
+	* os_dep.c (GC_get_main_stack_base): Try to use
+	pthread_attr_getstack first for Linux if THREADS.
+	* doc/README.macros (USE_GET_STACKBASE_FOR_MAIN): Adjust text
+	alignment.
+
 2011-04-13  Ivan Maidanski  <ivmai@mail.ru>
 
 	* dbg_mlc.c (GC_generate_random_backtrace_no_gc): Fix a message
